Fix vertical center alignment issue with text and image.

--- a/src/components/PoolInfoCard.scss
+++ b/src/components/PoolInfoCard.scss
@@ -44,8 +44,8 @@ div.poolInfoCard {
     display: flex;
     flex-wrap: wrap;
 
-    span {
-      vertical-align: top;
+    img {
+      vertical-align: text-bottom;
     }
 
     .token {
