--- a/src/components/TokenInput.scss
+++ b/src/components/TokenInput.scss
@@ -22,12 +22,9 @@ div.tokenInput {
     }
   }
 
-  span {
-    vertical-align: top;
-  }
-
   img {
     margin-right: 8px;
+    vertical-align: text-bottom;
   }
 
   button.max {
